--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "James Masangcay",
-            "email": "james.masangcay@sparkglobaltech.com"
+            "email": "jameskyurem@gmail.com"
         }
     ],
     "minimum-stability": "dev",
