--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "haymetg/buriza",
-    "description": "A sampe logic to mimic critical hits",
+    "description": "A sample logic to mimic critical hits",
     "type": "library",
     "license": "MIT",
     "authors": [
